communities in sidebar and same sidebar along the whole page. Added dark theme for the whole page